# datenight

./: .env.example  .gitignore  config.example.yaml  date_night_autopilot_spec_v5.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.paircoder/: capabilities.yaml
.paircoder/cache/: cli-update-cache.json  routing_decision_T1.1.json  session.json  time-tracking-cache.json
.paircoder/context/: project.md  state.md
.paircoder/data/: store.db
.paircoder/feedback/: calibration.json
.paircoder/history/: bypass_log.jsonl
.paircoder/plans/: plan-2026-03-sprint1-foundation.plan.yaml  plan-2026-03-sprint2-profiles-couples.plan.yaml  plan-2026-04-sprint3-venue-discovery.plan.yaml  plan-2026-04-sprint4-llm-pipeline.plan.yaml
.paircoder/telemetry/: audit.jsonl  heartbeat  session_snapshot.json  signals.jsonl  telemetry.jsonl
datenight/: __init__.py  api_client.py  cli.py  config.py  logging.py  ollama_client.py  planner.py  schemas.py  venue_resolver.py
sprints/: sprint-1-foundation-infrastructure.md  sprint-2-profiles-couples-api-client.md  sprint-3-venue-discovery-caching.md  sprint-4-llm-pipeline.md  sprint-5-deeplinks-calendar-history.md  sprint-6-polish-debug-hardening.md
tests/: conftest.py  test_api_client.py  test_cli.py  test_config.py  test_couple_commands.py  test_integration.py  test_logging.py  test_ollama_client.py  test_package.py  test_planner.py  test_profile_commands.py  test_schemas.py  test_venue_resolver.py
worker/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: index.ts  (+1 more)
(+60 files in other folders)
